--- a/CaseStudySelenium/test-output/old/Default suite/methods.html
+++ b/CaseStudySelenium/test-output/old/Default suite/methods.html
@@ -1,10 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="dcc9fe">  <td>24/08/21 04:01:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestMultipleURL.setup(java.lang.String)[pri:0, instance:com.Browserlaunch.TestMultipleURL@15ff3e9e]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="dcc9fe">  <td>24/08/21 04:01:32</td>   <td>1553</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestMultipleURL.testURLs()[pri:0, instance:com.Browserlaunch.TestMultipleURL@15ff3e9e]">testURLs</td> 
+<tr bgcolor="6c77c7">  <td>24/09/01 06:16:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ScreenshotHB.TestHB()[pri:0, instance:com.Screenshot.ScreenshotHB@1d2adfbe]">TestHB</td> 
   <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="dcc9fe">  <td>24/08/21 04:01:43</td>   <td>12823</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestMultipleURL.tearDown()[pri:0, instance:com.Browserlaunch.TestMultipleURL@15ff3e9e]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
 </table>
